# tech_blog_watcher

./: Cargo.toml  notified_urls.txt
.github/workflows/: rss-watcher.yml
src/: feeds.rs  main.rs
