[package]
name = "tech_blog_watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
rss = "2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"       # 環境変数の読み込みに使用
chrono = "0.4"        # 日付処理（必要なら）
